[package]
name = "bthome-scan"
version = "0.1.0"
edition = "2024"
description = "A CLI utility to scan and decode BTHome BLE advertisements"
keywords = ["bthome", "ble", "scan", "cli", "sensor"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ducktec/bthome-scan-rs"
authors = ["Robert Wiewel <dev@ducktec.de>"]
readme = "README.md"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
hex = "0.4"
uuid = "1.4"
futures = "0.3"
aes = "0.8"
ccm = "0.5"
generic-array = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
